src/test/ui/feature-gates/feature-gate-asm_sym.stderr
error[E0658]: sym operands for inline assembly are unstable
  --> $DIR/feature-gate-asm_sym.rs:9:29
   |
LL |         asm!("mov eax, {}", sym bar::<N>);
   |                             ^^^^^^^^^^^^
   |
   = note: see issue #93333 <https://github.com/rust-lang/rust/issues/93333> for more information
   = help: add `#![feature(asm_sym)]` to the crate attributes to enable

error[E0658]: sym operands for inline assembly are unstable
  --> $DIR/feature-gate-asm_sym.rs:16:29
   |
LL |         asm!("mov eax, {}", sym foo::<0>);
   |                             ^^^^^^^^^^^^
   |
   = note: see issue #93333 <https://github.com/rust-lang/rust/issues/93333> for more information
   = help: add `#![feature(asm_sym)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
